# flask

my_project/: .pre-commit-config.yaml  pyproject.toml
my_project/my_project/: my_module.py
my_project/my_project/models/: __init__.py  carro.py  veiculo.py
